[package]
name = "ws-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
color-print = "0.3.4"
indicatif = "0.17.2"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0.151", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.3.1"